--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "attrs>=24.3.0",
     "beautifulsoup4>=4.12.3",
     "httpx>=0.28.1",
-    "pyrss2gen>=1.1",
     "trio>=0.28.0",
 ]
 
@@ -39,4 +39,5 @@ select = ["ALL"]
 ignore = [
     "D",
     "COM812", # conflicts w/ formatter
+    "S101",   # defensive assert is good!
 ]
